# AI-Video-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ai-video-pipeline-presentation.html  docker-compose.yml  pyproject.toml  run.py
backend/: database.py  main.py  models.py  schemas.py  ws.py
backend/routers/: publishing.py  scenarios.py  settings.py  videos.py
backend/services/: scenario_service.py  video_service.py
configs/: character_remix_shrek.yaml  fruit_soap_ep1.yaml  mascot_realestate.yaml
docs/: HOW-IT-WORKS.md  ROADMAP.md
docs/mockups/: create-video.html  dashboard.html
docs/superpowers/plans/: 2026-03-26-backend-fastapi.md
docs/superpowers/specs/: 2026-03-26-web-ui-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  i18n.ts  types.ts
pipeline/: __init__.py  cli.py  config.py  orchestrator.py
pipeline/assembler/: video_assembler.py
pipeline/generators/: image_gen.py  replicate_client.py  scenario_gen.py  subtitle_gen.py  tts_gen.py  video_gen.py
pipeline/publishers/: base.py  instagram_pub.py  publish_manager.py  telegram_pub.py  tiktok_pub.py  vk_pub.py  youtube_pub.py
pipeline/utils/: logger.py
pipeline/web/: __init__.py
scripts/: generate_series.py  run_batch.sh
tests/: conftest.py  test_database.py  test_health.py  test_publishing_api.py  test_scenarios_api.py  test_schemas.py  test_settings_api.py  test_video_service.py  test_videos_api.py  test_ws.py
(+23 files in other folders)
